Bug 558161: Set bitmaps !dirty after their current contents has been updated. r=jrmuizel